@@ -17,7 +17,7 @@
 
 	<groupId>io.github.raduking</groupId>
 	<artifactId>openapi-offline-generator-plugin</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -46,27 +46,32 @@
 	</scm>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+		<maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
+		<maven.plugin.plugin.version>3.15.2</maven.plugin.plugin.version>
+
 		<!-- Publishing dependencies versions -->
-		<gpg.plugin.version>3.2.8</gpg.plugin.version>
-		<central.publishing.plugin.version>0.9.0</central.publishing.plugin.version>
+		<maven.gpg.plugin.version>3.2.8</maven.gpg.plugin.version>
+		<central.publishing.maven.plugin.version>0.9.0</central.publishing.maven.plugin.version>
 
 		<!-- Jacoco arguments empty by default -->
 		<jacocoArgLine></jacocoArgLine>
 
 		<!-- Testing dependencies versions -->
-		<jacoco.plugin.version>0.8.13</jacoco.plugin.version>
-		<project.info.reports.plugin.version>3.9.0</project.info.reports.plugin.version>
+		<jacoco.maven.plugin.version>0.8.14</jacoco.maven.plugin.version>
+		<maven.project.info.reports.plugin.version>3.9.0</maven.project.info.reports.plugin.version>
 
 		<!-- Testing properties -->
 		<integration.tests.pattern>**/*IT.java</integration.tests.pattern>
 		
 		<!-- Testing command line options -->
 		<oogpArgLine>
+			--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+			--add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
 		</oogpArgLine>
 	</properties>
 
@@ -133,7 +138,7 @@
 		<dependency>
 			<groupId>io.github.raduking</groupId>
 			<artifactId>apiphany</artifactId>
-			<version>1.0.14</version>
+			<version>1.0.17</version>
 		</dependency>
 
 		<!-- Javadoc -->
@@ -239,6 +244,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
@@ -309,7 +315,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.plugin.version}</version>
+				<version>${jacoco.maven.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>pre-unit-test</id>
@@ -371,7 +377,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.13.1</version>
+				<version>${maven.plugin.plugin.version}</version>
 				<configuration>
 					<goalPrefix>openapi-offline-generator-plugin</goalPrefix>
 				</configuration>
@@ -405,7 +411,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>${gpg.plugin.version}</version>
+						<version>${maven.gpg.plugin.version}</version>
 						<executions>
 							<execution>
 							<id>sign-artifacts</id>
@@ -430,7 +436,7 @@
 					<plugin>
 						<groupId>org.sonatype.central</groupId>
 						<artifactId>central-publishing-maven-plugin</artifactId>
-						<version>${central.publishing.plugin.version}</version>
+						<version>${central.publishing.maven.plugin.version}</version>
 						<extensions>true</extensions>
 						<configuration>
 							<autoPublish>true</autoPublish>
@@ -442,13 +448,6 @@
 				</plugins>
 			</build>
 		</profile>
-    	
-		<profile>
-			<id>eclipse</id>
-			<properties>
-				<jacocoArgLine></jacocoArgLine>
-			</properties>
-		</profile>
 	</profiles>
 
 	<reporting>
@@ -457,7 +456,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>${project.info.reports.plugin.version}</version>
+				<version>${maven.project.info.reports.plugin.version}</version>
 			</plugin>
 
 			<!--Jacoco code coverage -->
